# src/routes/user.ts
@@ -3,8 +3,11 @@ import express, { Router } from 'express'
 
 import getUserMiddleware from '../middlewares/getUser'
 import userController from '../controllers/user'
+import authRouter from './auth'
 
 const router: Router = express.Router()
+
+router.use('/auth', authRouter)
 
 // * Get Groups
 
